# mac-uninstaller

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  mac_uninstall.py  pyproject.toml  uninstall
Formula/: mac-uninstall.rb
